# pair-programming-exercise

./: .gitignore  README.md  fitbit.py  oura-sleep.md  oura_sleep.py  oura_test_data.py  pyproject.toml
tryvital/: db.py  main.py  models.py
tryvital/api/api_v1/: router.py
tryvital/api/api_v1/endpoints/: api.py  historical.py
