[tool.poetry]
name = "pair-programming-exercise"
version = "0.1.0"
description = ""
authors = ["emilioag <emilio@tryvital.io>"]
readme = "README.md"
packages = [{include = "tryvital"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
pydantic = "^1.10.2"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "tryvital.main:run_server"