[tool.poetry]
name = "pair-programming-exercise"
version = "0.1.0"
description = ""
authors = ["emilioag <emilio@tryvital.io>"]
readme = "README.md"
packages = [{include = "tryvital"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
fastapi = "^0.109.2"
pydantic = "^1.10.14"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
requests = "^2.31.0"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "tryvital.main:run_server"